--- a/frontend/car_rental/package.json
+++ b/frontend/car_rental/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^7.3.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "fs": "^0.0.1-security"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
